...
import S1 from './app/screens/VOMSTests/Row2Saccades/S1';
import S2 from './app/screens/VOMSTests/Row2Saccades/S2';
import S3Response2 from './app/screens/VOMSTests/Row2Saccades/S3Response3';
import S4 from './app/screens/VOMSTests/Row2Saccades/S4';
import S5 from './app/screens/VOMSTests/Row2Saccades/S5';
import S6 from './app/screens/VOMSTests/Row2Saccades/S6Response3';
import Disclaimer from './app/screens/Disclaimer';
import NPC1 from './app/screens/VOMSTests/Row4NPC/NPC1';
import NPC2 from './app/screens/VOMSTests/Row4NPC/NPC2';
import NPC3 from './app/screens/VOMSTests/Row4NPC/NPC3';
import NPC4 from './app/screens/VOMSTests/Row4NPC/NPC4Response7';

import VMS1 from './app/screens/VOMSTests/ROW5VMS/VMS1';
...
import HTComplete from './app/screens/HopTests/HTComplete';
import HTConfirm from "./app/screens/HopTests/HTConfirm";
import HTForm from "./app/screens/HopTests/HTForm";
import HTForm2 from "./app/screens/HopTests/HTForm2";

import Header from './Header';
import LoginScreen from './app/screens/Login';
import AllReports from './app/screens/AllReports';
import AllPrelimReports from './app/screens/AllPrelimReports';
import AllIncidentReports from './app/screens/AllIncidentReports';
import DSLComplete from './app/screens/DSLComplete';
import { ViewPagerAndroidBase } from 'react-native';
import AllDSReports from './app/screens/AllDSReports';
...
  );
}

function MyDrawer() {
  return (
    <Drawer.Navigator testID='navigator' drawerContent={(props) => <CustomDrawerContent {...props}/>}>
      <Drawer.Screen testID='drawerNavScreen' setOptions={{headerShown: false}} name="Start" component={OpenDisclaimer} 
        options={{
          headerTitle: () => <Header testID='disclaimerHeader' name="Disclaimer"></Header>,
          headerLeft: () => (<View testID={'header_left_myDrawer'}
                                    accessible={true}
                                    accessibilityLabel={'header_left_myDrawer'}
                                    name='header_left_myDrawer'
...
            borderBottomLeftRadius: 0,
            borderBottomRightRadius: 0,
            backgroundColor: '#9AD3FF',
            elevation: 25,
          }
        }}/>
      <Drawer.Screen testID='drawerHomePage' name="Home Page" component={HomeScreen} 
        options={{
          headerTitle: () => <Header testID='headerDrawerScreenTitle' name=""></Header>,
          headerStyle: {
            height: (Dimensions.get('window').height)/9,
            borderBottomLeftRadius: 0,
            borderBottomRightRadius: 0,
            backgroundColor: '#E2F2FF',
            elevation: 25,
          }
        }}/>
      <Drawer.Screen testID='Login' accessible={true} accessibilityLabel={'Login'} name="Login" component={LoginScreen} />
      <Drawer.Screen testID='Reports' accessible={true} accessibilityLabel={'Reports'} name="Reports" component={AllReports} />
      <Drawer.Screen testID='Preliminary Tests' accessible={true} accessibilityLabel={'Preliminary Tests'} name="Preliminary Tests" component={FurtherTestsScreen} />
      <Drawer.Screen testID='Daily Symptom Checklist' accessible={true} accessibilityLabel={'Daily Symptom Checklist'} name="Daily Symptom Checklist" component={DSLScreen}/>
      <Drawer.Screen testID='Concussion Action Plan' accessible={true} accessibilityLabel={'Concussion Action Plan'} name="Concussion Action Plan" component={ActionPlanScreen} />
      <Drawer.Screen testID='VOMS tests' accessible={true} accessibilityLabel={'VOMS Tests'} name="VOMS Tests" component={VOMSStart} /> 
      <Drawer.Screen testID='Continue Tests' accessible={true} accessibilityLabel={'Continue Tests'} name="Continue Tests" component={CustomNavContent} 
    
       options={{
        headerTitle: () => <Header testID='headerTitle' name=""></Header>,
        headerStyle: {
          height: (Dimensions.get('window').height)/9,
          borderBottomLeftRadius: 0,
...
